--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -80,20 +80,13 @@ jobs:
         with:
           path: version1.txt
 
-      - name: Update version
-        run: |
-          VERSION_NAME="1.0.0"
-          VERSION_CODE="1"
-          echo $VERSION_NAME
-          echo $VERSION_CODE
-
-      - name: Update KeyStore password in gradle properties
+      - name: Update KeyStore password in key properties
         run: sed -i 's/#{KEYSTORE_PASS}#/${{ secrets.KEYSTORE_PASS }}/g' key.properties
 
-      - name: Update KeyStore key password in gradle properties
+      - name: Update KeyStore key password in key properties
         run: sed -i 's/#{KEYSTORE_KEY_PASS}#/${{ secrets.KEYSTORE_KEY_PASS }}/g' key.properties
 
-      - name: Update key alias in gradle properties
+      - name: Update key alias in key properties
         run: sed -i 's/#{KEY_ALIAS}#/${{ secrets.KEY_ALIAS }}/g' key.properties
 
       - name: Build Android APK
@@ -113,3 +106,24 @@ jobs:
         with:
           name: android-release
           path: app/build/outputs/apk/release/app-release.apk
+
+  firebase_distribution:
+    name: Release app to firebase distribution
+    runs-on: ubuntu-latest
+    needs: [ build ]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Get app apk from artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: android-release
+
+      - name: Firebase App Distribution
+        uses: wzieba/Firebase-Distribution-Github-Action@v1.7.0
+        with:
+          appId: ${{secrets.FIREBASE_ANDROID_APPID}}
+          serviceCredentialsFileContent: ${{ secrets.FIREBASE_TOKEN }}
+          groups: testers
+          file: app-release.apk
