--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -124,6 +124,6 @@ jobs:
         uses: wzieba/Firebase-Distribution-Github-Action@v1.7.0
         with:
           appId: ${{secrets.FIREBASE_ANDROID_APPID}}
-          serviceCredentialsFileContent: ${{ secrets.FIREBASE_TOKEN }}
+          serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
           groups: testers
           file: app-release.apk
