--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -24,24 +24,9 @@ jobs:
           cache: gradle
       - run: ./gradlew lintRelease
 
-  version:
-    name: Create version number
-    runs-on: ubuntu-latest
-    needs: [ lint ]
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Fetch all history for all tags and branches
-        run: git fetch --unshallow --tags
-
-      - name: Generate version string
-        id: version-string
-        run: echo "VERSION_STR=${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
-
   build:
     name: Build apk
-    needs: [ version ]
+    needs: [ lint ]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -53,6 +38,10 @@ jobs:
           distribution: zulu
           java-version: 17
           cache: gradle
+
+      - name: Create version number
+        id: version-string
+        run: echo "VERSION_STR=${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
 
       - name: Bump version
         uses: chkfung/android-version-actions@v1.2.1
@@ -77,7 +66,7 @@ jobs:
         with:
           artifacts: "app/build/outputs/apk/release/app-release.apk"
           token: ${{ secrets.TOKEN_GITHUB }}
-          tag: Release v${{ steps.version-string.outputs.VERSION_STR }}
+          tag: ${{ steps.version-string.outputs.VERSION_STR }}
           commit: ${{ github.sha }}
           prerelease: false
 
@@ -107,3 +96,4 @@ jobs:
           serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
           groups: testers
           file: app-release.apk
+          releaseNotes: ${{ github.sha }}
