-Create version number in GitAction

--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -46,13 +46,13 @@ jobs:
 
       - name: Create version number
         id: version-string
-        run: echo "VERSION_STR=${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
+        run: echo "VERSION=${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
 
       - name: Bump version
         uses: chkfung/android-version-actions@v1.2.1
         with:
           gradlePath: app/build.gradle.kts
-          versionName: ${{ steps.version-string.outputs.VERSION_STR }}
+          versionName: ${{ steps.version-string.outputs.VERSION }}
 
       - name: Update KeyStore password in key properties
         run: sed -i 's/#{KEYSTORE_PASS}#/${{ secrets.KEYSTORE_PASS }}/g' key.properties
@@ -72,7 +72,7 @@ jobs:
           artifacts: "app/build/outputs/apk/release/app-release.apk"
           token: ${{ secrets.TOKEN_GITHUB }}
           tag: ${{ github.ref }}
-          commit: ${{ steps.version-string.outputs.VERSION_STR }}
+          commit: ${{ steps.version-string.outputs.VERSION }}
           prerelease: false
 
       - name: Upload app apk
