-Create version number in GitAction

--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -30,7 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     if: success() && startsWith(github.ref, 'refs/tags/v')
     steps:
-      - name: Generate version string
+      - name: Create version number
         id: version-string
         run: echo "VERSION_STR=${GITHUB_REF##*/}" >> GITHUB_OUTPUT
 
@@ -44,15 +44,11 @@ jobs:
           java-version: 17
           cache: gradle
 
-      - name: Create version number
-        id: version-string
-        run: echo "VERSION=${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
-
       - name: Bump version
         uses: chkfung/android-version-actions@v1.2.1
         with:
           gradlePath: app/build.gradle.kts
-          versionName: ${{ steps.version-string.outputs.VERSION }}
+          versionName: ${{ steps.version-string.outputs.VERSION_STR }}
 
       - name: Update KeyStore password in key properties
         run: sed -i 's/#{KEYSTORE_PASS}#/${{ secrets.KEYSTORE_PASS }}/g' key.properties
@@ -72,7 +68,7 @@ jobs:
           artifacts: "app/build/outputs/apk/release/app-release.apk"
           token: ${{ secrets.TOKEN_GITHUB }}
           tag: ${{ github.ref }}
-          commit: ${{ steps.version-string.outputs.VERSION }}
+          commit: ${{ steps.version-string.outputs.VERSION_STR }}
           prerelease: false
 
       - name: Upload app apk
