--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
     tags:
-      - v[0-9]+.[0-9]+.[0-9]+
+      - "v[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
 
@@ -31,7 +31,7 @@ jobs:
     steps:
       - name: Create version number
         id: version-string
-        run: echo "VERSION_STR=${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
+        run: echo "VERSION_STR=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_OUTPUT
 
       - name: Checkout code
         uses: actions/checkout@v3
