--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -30,8 +30,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Create version number
+        if: ${{ startsWith(github.ref, 'refs/tags/v') }}
         id: version-string
-        run: echo "VERSION_STR=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_OUTPUT
+        run: echo "VERSION_STR=$(echo ${{ github.ref }} | cut -d '/' -f 3 | cut -c2-)" >> $GITHUB_OUTPUT
 
       - name: Checkout code
         uses: actions/checkout@v3
