--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - master
-    tags:
-      - "v[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
 
@@ -24,16 +22,40 @@ jobs:
           cache: gradle
       - run: ./gradlew lintRelease
 
+  version:
+    name: Create version number
+    runs-on: ubuntu-latest
+    needs: [ lint ]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Fetch all history for all tags and branches
+        run: git fetch --unshallow --tags
+
+      - name: Install GitVersion
+        uses: gittools/actions/gitversion/setup@v0.9.10
+        with:
+          versionSpec: '5.x'
+
+      - name: Use GitVersion
+        id: gitversion
+        uses: gittools/actions/gitversion/execute@v0.9.10
+
+      - name: Create version.txt with nuGetVersion
+        run: echo ${{ steps.gitversion.outputs.nuGetVersion  }} > version.txt
+
+      - name: Upload version.txt
+        uses: actions/upload-artifact@v3
+        with:
+          name: gitversion
+          path: version.txt
+
   build:
     name: Build apk
-    needs: [ lint ]
+    needs: [ version ]
     runs-on: ubuntu-latest
     steps:
-      - name: Create version number
-        if: ${{ startsWith(github.ref, 'refs/tags/v') }}
-        id: version-string
-        run: echo "VERSION_STR=$(echo ${{ github.ref }} | cut -d '/' -f 3 | cut -c2-)" >> $GITHUB_OUTPUT
-
       - name: Checkout code
         uses: actions/checkout@v3
 
@@ -44,11 +66,25 @@ jobs:
           java-version: 17
           cache: gradle
 
+      - name: Get version.txt
+        uses: actions/download-artifact@v3
+        with:
+          name: gitversion
+
+      - name: Create new file without newline char from version.txt
+        run: tr -d '\n' < version.txt > version1.txt
+
+      - name: Read version
+        id: version
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: version1.txt
+
       - name: Bump version
         uses: chkfung/android-version-actions@v1.2.1
         with:
           gradlePath: app/build.gradle.kts
-          versionName: ${{ steps.version-string.outputs.VERSION_STR }}
+          versionName: ${{ steps.version.outputs.content }}
 
       - name: Update KeyStore password in key properties
         run: sed -i 's/#{KEYSTORE_PASS}#/${{ secrets.KEYSTORE_PASS }}/g' key.properties
@@ -67,8 +103,8 @@ jobs:
         with:
           artifacts: "app/build/outputs/apk/release/app-release.apk"
           token: ${{ secrets.TOKEN_GITHUB }}
-          tag: ${{ github.ref }}
-          commit: ${{ steps.version-string.outputs.VERSION_STR }}
+          tag: ${{ steps.version.outputs.content }}
+          commit: ${{ github.sha }}
           prerelease: false
 
       - name: Upload app apk
@@ -97,4 +133,3 @@ jobs:
           serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
           groups: testers
           file: app-release.apk
-          releaseNotes: ${{ github.sha }}
