--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -89,3 +89,4 @@ jobs:
           serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
           groups: testers
           file: app-release.apk
+          releaseNotes: ${{ github.event.head_commit.message }}
