-Add Cast Detail

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 coreKtxVersion = "1.12.0"
-composeVersion = "1.5.4"
-composeMaterial3Version = "1.1.2"
+composeVersion = "1.6.0"
+composeMaterial3Version = "1.2.0-rc01"
 activityComposeVersion = "1.8.2"
 okhttpVersion = "4.12.0"
 gsonVersion = "2.10.1"
@@ -16,10 +16,10 @@ coroutinesVersion = "1.7.3"
 glideComposeVersion = "1.0.0-beta01"
 dataStoreVersion = "1.0.0"
 navigationVersion = "2.7.6"
-readmoreVersion = "1.4.4"
+readmoreVersion = "1.5.2"
 youtubeplayerVersion = "12.1.0"
 roomVersion = "2.6.1"
-constraintlayoutComposeVersion = "1.0.1"
+constraintlayoutComposeVersion = "1.1.0-alpha13"
 
 [libraries]
 androidx-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtxVersion" }
@@ -35,6 +35,7 @@ navigation-compose = { group = "androidx.navigation", name = "navigation-compose
 lifecycle-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycleComposeVersion" }
 constraintlayout-compose = { group = "androidx.constraintlayout", name = "constraintlayout-compose", version.ref = "constraintlayoutComposeVersion" }
 icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "composeVersion" }
+foundation-android = { group = "androidx.compose.foundation", name = "foundation-android", version.ref = "composeVersion" }
 
 glideCompose = { group = "com.github.bumptech.glide", name = "compose", version.ref = "glideComposeVersion" }
 datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "dataStoreVersion" }
