- Update version some lib

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 coreKtxVersion = "1.12.0"
-composeVersion = "1.6.0"
-composeMaterial3Version = "1.2.0-rc01"
+composeVersion = "1.6.2"
+composeMaterial3Version = "1.2.0"
 activityComposeVersion = "1.8.2"
 moshiKotlinVersion = "1.15.1"
 okhttpVersion = "4.12.0"
@@ -10,12 +10,12 @@ retrofitVersion = "2.9.0"
 lifecycleVersion = "2.7.0"
 lifecycleComposeVersion = "2.7.0"
 hiltVersion = "2.50"
-hiltCompilerVersion = "1.1.0"
+hiltCompilerVersion = "1.2.0"
 pluginSerializationVersion = "1.7.20"
 coroutinesVersion = "1.7.3"
 glideComposeVersion = "1.0.0-beta01"
 dataStoreVersion = "1.0.0"
-navigationVersion = "2.7.6"
+navigationVersion = "2.7.7"
 readmoreVersion = "1.5.2"
 timberVersion = "5.0.1"
 youtubeplayerVersion = "12.1.0"
