--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 coreKtxVersion = "1.12.0"
-composeVersion = "1.6.2"
-composeMaterial3Version = "1.2.0"
+composeVersion = "1.6.3"
+composeMaterial3Version = "1.2.1"
 activityComposeVersion = "1.8.2"
 moshiKotlinVersion = "1.15.1"
 okhttpVersion = "4.12.0"
@@ -17,14 +17,15 @@ glideComposeVersion = "1.0.0-beta01"
 dataStoreVersion = "1.0.0"
 navigationVersion = "2.7.7"
 readmoreVersion = "1.5.2"
+securityCryptoKtxVersion = "1.1.0-alpha06"
 timberVersion = "5.0.1"
 youtubeplayerVersion = "12.1.0"
 roomVersion = "2.6.1"
 constraintlayoutComposeVersion = "1.1.0-alpha13"
-glideTransformationsVersion = "4.3.0"
 
 [libraries]
 androidx-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtxVersion" }
+androidx-security-crypto-ktx = { module = "androidx.security:security-crypto-ktx", version.ref = "securityCryptoKtxVersion" }
 lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleVersion" }
 androidx-lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime", version.ref = "lifecycleVersion" }
 
@@ -40,14 +41,13 @@ constraintlayout-compose = { group = "androidx.constraintlayout", name = "constr
 icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "composeVersion" }
 foundation-android = { group = "androidx.compose.foundation", name = "foundation-android", version.ref = "composeVersion" }
 
+glideCompose = { group = "com.github.bumptech.glide", name = "compose", version.ref = "glideComposeVersion" }
 datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "dataStoreVersion" }
 datastore = { group = "androidx.datastore", name = "datastore", version.ref = "dataStoreVersion" }
 
 glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glideVersion" }
-glideCompose = { group = "com.github.bumptech.glide", name = "compose", version.ref = "glideComposeVersion" }
 glide-ksp = { group = "com.github.bumptech.glide", name = "ksp", version.ref = "glideVersion" }
 glide-okhttp3-integration = { group = "com.github.bumptech.glide", name = "okhttp3-integration", version.ref = "glideVersion" }
-glide-transformations = { module = "jp.wasabeef:glide-transformations", version.ref = "glideTransformationsVersion" }
 
 coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutinesVersion" }
 coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutinesVersion" }
