--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,27 +1,28 @@
 [versions]
-coreKtxVersion = "1.12.0"
-composeVersion = "1.6.3"
+coreKtxVersion = "1.13.1"
+composeVersion = "1.6.7"
 composeMaterial3Version = "1.2.1"
-activityComposeVersion = "1.8.2"
+activityComposeVersion = "1.9.0"
 moshiKotlinVersion = "1.15.1"
 okhttpVersion = "4.12.0"
-glideVersion = "5.0.0-rc01"
+coilVersion = "2.6.0"
 retrofitVersion = "2.9.0"
-lifecycleVersion = "2.7.0"
-lifecycleComposeVersion = "2.7.0"
+lifecycleVersion = "2.8.0"
+lifecycleComposeVersion = "2.8.0"
 hiltVersion = "2.50"
 hiltCompilerVersion = "1.2.0"
-pluginSerializationVersion = "1.7.20"
-coroutinesVersion = "1.7.3"
-glideComposeVersion = "1.0.0-beta01"
-dataStoreVersion = "1.0.0"
-navigationVersion = "2.7.7"
+coroutinesVersion = "1.8.0"
+dataStoreVersion = "1.1.1"
+navigationVersion = "2.8.0-beta01"
 readmoreVersion = "1.5.2"
 timberVersion = "5.0.1"
 youtubeplayerVersion = "12.1.0"
 roomVersion = "2.6.1"
 constraintlayoutComposeVersion = "1.1.0-alpha13"
-glideTransformationsVersion = "4.3.0"
+kotlinxSerializationJson = "1.7.0-RC"
+kotlinVersion = "2.0.0-RC3"
+fragmentKtxVersion = "1.7.1"
+transformationsVersion = "2.0.3"
 
 [libraries]
 androidx-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtxVersion" }
@@ -40,14 +41,11 @@ constraintlayout-compose = { group = "androidx.constraintlayout", name = "constr
 icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "composeVersion" }
 foundation-android = { group = "androidx.compose.foundation", name = "foundation-android", version.ref = "composeVersion" }
 
-glideCompose = { group = "com.github.bumptech.glide", name = "compose", version.ref = "glideComposeVersion" }
+coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coilVersion" }
+coil-transformations = { group = "com.github.Commit451.coil-transformations", name = "transformations", version.ref = "transformationsVersion" }
+
 datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "dataStoreVersion" }
 datastore = { group = "androidx.datastore", name = "datastore", version.ref = "dataStoreVersion" }
-
-glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glideVersion" }
-glide-ksp = { group = "com.github.bumptech.glide", name = "ksp", version.ref = "glideVersion" }
-glide-okhttp3-integration = { group = "com.github.bumptech.glide", name = "okhttp3-integration", version.ref = "glideVersion" }
-glide-transformations = { module = "jp.wasabeef:glide-transformations", version.ref = "glideTransformationsVersion" }
 
 coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutinesVersion" }
 coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutinesVersion" }
@@ -71,5 +69,10 @@ room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "roomVersion" }
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "roomVersion" }
 
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
+androidx-fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragmentKtxVersion" }
+
+
 [plugins]
-kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "pluginSerializationVersion" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlinVersion" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlinVersion" }
