--- a/key.properties
+++ b/key.properties
@@ -1,4 +1,4 @@
 storePassword=#{KEYSTORE_PASS}#
 keyPassword=#{KEYSTORE_KEY_PASS}#
 keyAlias=#{KEY_ALIAS}#
-storeFile=./keystore/test_keys.jks
+storeFile=./keystore/movie_keystore.jks
