- Upgrade navigate compose lib

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,19 +1,19 @@
 [versions]
 coreKtxVersion = "1.13.1"
-composeVersion = "1.6.7"
+composeVersion = "1.6.8"
 composeMaterial3Version = "1.2.1"
-activityComposeVersion = "1.9.0"
+activityComposeVersion = "1.9.1"
 moshiKotlinVersion = "1.15.1"
 okhttpVersion = "4.12.0"
 coilVersion = "2.6.0"
 retrofitVersion = "2.9.0"
-lifecycleVersion = "2.8.0"
-lifecycleComposeVersion = "2.8.0"
+lifecycleVersion = "2.8.4"
+lifecycleComposeVersion = "2.8.4"
 hiltVersion = "2.50"
 hiltCompilerVersion = "1.2.0"
 coroutinesVersion = "1.8.0"
 dataStoreVersion = "1.1.1"
-navigationVersion = "2.8.0-beta01"
+navigationVersion = "2.8.0-rc01"
 readmoreVersion = "1.5.2"
 timberVersion = "5.0.1"
 tinkAndroidVersion = "1.9.0"
@@ -22,7 +22,7 @@ roomVersion = "2.6.1"
 constraintlayoutComposeVersion = "1.1.0-alpha13"
 kotlinxSerializationJson = "1.7.0-RC"
 kotlinVersion = "2.0.0-RC3"
-fragmentKtxVersion = "1.7.1"
+fragmentKtxVersion = "1.8.2"
 transformationsVersion = "2.0.3"
 securityCryptoKtxVersion = "1.1.0-alpha06"
 
