--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,8 @@ coreKtxVersion = "1.15.0"
 composeVersion = "1.7.6"
 composeMaterial3Version = "1.3.1"
 activityComposeVersion = "1.9.3"
+imagepicker = "2.1"
+legacySupportV4 = "1.0.0"
 moshiKotlinVersion = "1.15.1"
 okhttpVersion = "4.12.0"
 coilVersion = "2.6.0"
@@ -15,6 +17,7 @@ coroutinesVersion = "1.8.0"
 dataStoreVersion = "1.1.1"
 navigationVersion = "2.8.5"
 readmoreVersion = "1.5.2"
+sdpAndroid = "1.0.6"
 timberVersion = "5.0.1"
 tinkAndroidVersion = "1.9.0"
 youtubeplayerVersion = "12.1.0"
@@ -27,6 +30,9 @@ transformationsVersion = "2.0.3"
 
 [libraries]
 androidx-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtxVersion" }
+intuit-sdp-android = { module = "com.intuit.sdp:sdp-android", version.ref = "sdpAndroid" }
+dhaval2404-imagepicker = { module = "com.github.dhaval2404:imagepicker", version.ref = "imagepicker" }
+legacy-support-v4 = { module = "androidx.legacy:legacy-support-v4", version.ref = "legacySupportV4" }
 lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleVersion" }
 androidx-lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime", version.ref = "lifecycleVersion" }
 
