--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,46 +1,46 @@
 [versions]
-coreKtxVersion = "1.15.0"
-composeVersion = "1.7.6"
-composeMaterial3Version = "1.3.1"
-activityComposeVersion = "1.9.3"
+coreKtxVersion = "1.16.0"
+compose-bom = "2025.07.00"
+activityComposeVersion = "1.10.1"
 moshiKotlinVersion = "1.15.1"
 okhttpVersion = "4.12.0"
 coilVersion = "2.6.0"
 retrofitVersion = "2.11.0"
-lifecycleVersion = "2.8.7"
-lifecycleComposeVersion = "2.8.7"
 hiltVersion = "2.50"
 hiltCompilerVersion = "1.2.0"
-coroutinesVersion = "1.8.0"
-dataStoreVersion = "1.1.1"
-navigationVersion = "2.8.5"
+coroutinesVersion = "1.8.1"
+dataStoreVersion = "1.1.7"
 readmoreVersion = "1.5.2"
 timberVersion = "5.0.1"
 tinkAndroidVersion = "1.9.0"
 youtubeplayerVersion = "12.1.0"
-roomVersion = "2.6.1"
-constraintlayoutComposeVersion = "1.1.0"
-kotlinxSerializationJson = "1.7.0-RC"
+roomVersion = "2.7.2"
+constraintlayoutComposeVersion = "1.1.1"
+kotlinxSerializationJson = "1.7.3"
 kotlinVersion = "2.0.0-RC3"
-fragmentKtxVersion = "1.8.5"
+fragmentKtxVersion = "1.8.8"
 transformationsVersion = "2.0.3"
+navigationVersion = "2.9.2"
 
 [libraries]
+compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
 androidx-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtxVersion" }
-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleVersion" }
-androidx-lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime", version.ref = "lifecycleVersion" }
+lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose" }
+androidx-lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime" }
 
-compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "composeVersion" }
-compose-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics", version.ref = "composeVersion" }
-compose-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview", version.ref = "composeVersion" }
-compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "composeMaterial3Version" }
-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityComposeVersion" }
+compose-ui = { group = "androidx.compose.ui", name = "ui" }
+compose-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
+compose-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
+compose-material3 = { group = "androidx.compose.material3", name = "material3" }
 moshi-kotlin = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshiKotlinVersion" }
+lifecycle-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose" }
+icons-extended = { group = "androidx.compose.material", name = "material-icons-extended" }
+foundation-android = { group = "androidx.compose.foundation", name = "foundation" }
+compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationVersion" }
-lifecycle-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycleComposeVersion" }
+
+activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityComposeVersion" }
 constraintlayout-compose = { group = "androidx.constraintlayout", name = "constraintlayout-compose", version.ref = "constraintlayoutComposeVersion" }
-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "composeVersion" }
-foundation-android = { group = "androidx.compose.foundation", name = "foundation-android", version.ref = "composeVersion" }
 
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coilVersion" }
 coil-transformations = { group = "com.github.Commit451.coil-transformations", name = "transformations", version.ref = "transformationsVersion" }
@@ -73,8 +73,6 @@ room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "roomVers
 
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 androidx-fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragmentKtxVersion" }
-
-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "composeVersion" }
 
 
 [plugins]
