--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,8 +6,8 @@ moshiKotlinVersion = "1.15.1"
 okhttpVersion = "4.12.0"
 coilVersion = "2.6.0"
 retrofitVersion = "2.11.0"
-hiltVersion = "2.50"
-hiltCompilerVersion = "1.2.0"
+hiltVersion = "2.57"
+hiltCompilerVersion = "1.3.0-alpha02"
 coroutinesVersion = "1.8.1"
 dataStoreVersion = "1.1.7"
 readmoreVersion = "1.5.2"
@@ -17,7 +17,7 @@ youtubeplayerVersion = "12.1.0"
 roomVersion = "2.7.2"
 constraintlayoutComposeVersion = "1.1.1"
 kotlinxSerializationJson = "1.7.3"
-kotlinVersion = "2.0.0-RC3"
+kotlinVersion = "2.1.21"
 fragmentKtxVersion = "1.8.8"
 transformationsVersion = "2.0.3"
 navigationVersion = "2.9.2"
