--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,24 +2,23 @@
 coreKtxVersion = "1.16.0"
 compose-bom = "2025.07.00"
 activityComposeVersion = "1.10.1"
-moshiKotlinVersion = "1.15.1"
-okhttpVersion = "4.12.0"
-coilVersion = "2.6.0"
-retrofitVersion = "2.11.0"
+moshiKotlinVersion = "1.15.2"
+okhttpVersion = "5.1.0"
+coilVersion = "3.3.0"
+retrofitVersion = "3.0.0"
 hiltVersion = "2.57"
 hiltCompilerVersion = "1.3.0-alpha02"
-coroutinesVersion = "1.8.1"
+coroutinesVersion = "1.10.2"
 dataStoreVersion = "1.1.7"
-readmoreVersion = "1.5.2"
+readmoreVersion = "1.7.4"
 timberVersion = "5.0.1"
-tinkAndroidVersion = "1.9.0"
-youtubeplayerVersion = "12.1.0"
+tinkAndroidVersion = "1.18.0"
+youtubeplayerVersion = "12.1.2"
 roomVersion = "2.7.2"
 constraintlayoutComposeVersion = "1.1.1"
-kotlinxSerializationJson = "1.7.3"
-kotlinVersion = "2.1.21"
+kotlinxSerializationJson = "1.9.0"
+kotlinVersion = "2.2.0"
 fragmentKtxVersion = "1.8.8"
-transformationsVersion = "2.0.3"
 navigationVersion = "2.9.2"
 
 [libraries]
@@ -42,8 +41,8 @@ navigation-compose = { group = "androidx.navigation", name = "navigation-compose
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityComposeVersion" }
 constraintlayout-compose = { group = "androidx.constraintlayout", name = "constraintlayout-compose", version.ref = "constraintlayoutComposeVersion" }
 
-coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coilVersion" }
-coil-transformations = { group = "com.github.Commit451.coil-transformations", name = "transformations", version.ref = "transformationsVersion" }
+coil-compose = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref = "coilVersion" }
+coil-network = { group = "io.coil-kt.coil3", name = "coil-network-okhttp", version.ref = "coilVersion" }
 
 datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "dataStoreVersion" }
 datastore = { group = "androidx.datastore", name = "datastore", version.ref = "dataStoreVersion" }
