--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,13 +1,13 @@
 [versions]
-coreKtxVersion = "1.16.0"
-compose-bom = "2025.07.00"
+coreKtxVersion = "1.17.0"
+compose-bom = "2025.08.00"
 activityComposeVersion = "1.10.1"
 moshiKotlinVersion = "1.15.2"
 okhttpVersion = "5.1.0"
 coilVersion = "3.3.0"
 retrofitVersion = "3.0.0"
 hiltVersion = "2.57"
-hiltCompilerVersion = "1.3.0-alpha02"
+hiltCompilerVersion = "1.3.0-beta01"
 coroutinesVersion = "1.10.2"
 dataStoreVersion = "1.1.7"
 readmoreVersion = "1.7.4"
@@ -17,9 +17,9 @@ youtubeplayerVersion = "12.1.2"
 roomVersion = "2.7.2"
 constraintlayoutComposeVersion = "1.1.1"
 kotlinxSerializationJson = "1.9.0"
-kotlinVersion = "2.2.0"
-fragmentKtxVersion = "1.8.8"
-navigationVersion = "2.9.2"
+kotlinVersion = "2.2.10"
+fragmentKtxVersion = "1.8.9"
+navigationVersion = "2.9.3"
 
 [libraries]
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
